# rust-ort-opencv-yolov8-example

./: Cargo.toml  README.md
src/: main.rs
